- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.4.0, 5.4.1, 5.4.2, 5.5.0, 5.6.0 Alpha, 5.6.0 Beta
- 
    None
- 
    Arch Linux, Qt 5.4.2, Qt 5.5.0 beta
- 
        b9f76db30d261421e4da58f29053181af04ceb4d e4fb521b3f3b9e59146b7569b72aee08dbaeb268 c511466d747d99ee76465cfe90ce594fa1f27469
Steps to reproduce using software from the attachment:
- move mouse cursor to the center of the window (cursor shape is now CrossCursor),
- click and hold left mouse button,
- move the mouse outside the window (the best way to reproduce is to move through the title bar) (now the cursor shape is still CrossCursor with Qt 5.5(OK) or ArrowCursor with Qt 5.4(BAD)) ,
- move (slowly) mouse cursor to the center of window (now the cursor shape is ArrowCursor in Qt 5.5 and Qt 5.4, but should be CrossCursor),
- release left mouse button - the cursor still remains ArrowCursor instead of CrossCursor.
When using Qt 5.5 if you decrease layout margin and you move the mouse quickly, CrossCursor remains.
Expected results: while mouse button is held, the cursor shape must not change (like in Qt4).
It affects all Qt5 applications including QtCreator under Linux/XCB.
- is duplicated by
- 
                    QTBUG-52332 mouse pointer state changes when hold dragging beyond threshold -         
- Reported
 
-